Enable report generation
